--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - .:/app:delegated
       - ./node_modules:/app/node_modules
     ports:
-      - 8080:8080
+      - 8000:8000
+    network_mode: host
     working_dir: /app
-    command: npm run dev
+    command: sh -c "npm install && npm run dev"
