--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       - 8000:8000
     working_dir: /app
     command: sh -c "npm install && npm run dev"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
